--- a/React【CodeMafia】/04_react_basic/package.json
+++ b/React【CodeMafia】/04_react_basic/package.json
@@ -23,6 +23,9 @@
     "test": "npx cross-env PORT=3001 react-scripts test",
     "eject": "npx cross-env PORT=3001 react-scripts eject"
   },
+  "rules": {
+    "no-console": "off"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
